@@ -1,2 +1,4 @@
 Remove one or more packages and their configuration files.
 $ wajig purge PKG
+options:
+  -y --yes      purge without (yes/no) prompts; use with care!
